# python-project-83

./: .env  README.md  build.sh  database.sql  pyproject.toml
page_analyzer/: app.py
page_analyzer/templates/: index.html  url_show.html  urls_list.html
page_analyzer/templates/layout/: base.html
